[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }

chrono = { workspace = true }
chat_core = { workspace = true }
hex = "0.4.3"

mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.118"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jwt-simple = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
sqlx-db-tester = "0.4.2"
