[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat_core = { workspace = true }
chat_server = { workspace = true ,features=["test-util"] }
notify_server = { workspace = true }
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "json",
    "multipart"
] }
tokio = { workspace = true }

[dependencies]
futures = "0.3.30"
reqwest-eventsource = "0.6.0"
serde.workspace = true
serde_json = "1.0.120"
